# Image-Filter-App

./: .gitignore  CMakeLists.txt
Helpers/: image_utils.hpp  image_utils.py  styles.py  undo_manager.py
backend/: color_hybrid.cpp  hist_contrast.cpp  main_bindings.cpp  noise_filters.cpp
frontend/: cv_backend.cp311-win_amd64.pyd  main_window.py  tab_color_hybrid.py  tab_edge_freq.py  tab_hist_contrast.py  tab_noise_filters.py
